tests/error/comptime/check_dereference13.bz
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		__builtin_inplace_construct(p, 0);
		__builtin_comptime_free(p);
		*p;
	});
}
